[package]
name = "ais_runner"
version = "2.0.0"
edition = "2024"

[dependencies]
artisan_middleware = { path = "/home/dwhitfield/Developer/Artisan_Hosting/Libraries/artisan_lib" }
#artisan_middleware = { git = "https://github.com/Artisan-Hosting/artisan_lib.git", branch = "stable" }
config = "0.14.0"
serde = "1.0.210"
serde_json = "1.0.128"
toml = "0.8.19"
# Pretty printing
simple_pretty = "0.1.0"
tokio = "1.40.0"
rng = "0.1.0"
rand = "0.8.5"
colored = "2.1.0"
nix = "0.29.0"
signal-hook = "0.3.17"
shell-words = "1.1.0"
dir_watcher = "1.2.0"
once_cell = "1.20"
notify = "8.1.0"

[dev-dependencies]
tempfile = "3.10.1"
